2011-05-19  Emil A Eklund  <eae@chromium.org>

Reviewed by Alexey Proskuryakov.

        REGRESSION (r80808): Multiple <select> - Selection reset to first element from multiple selected ones
        https://bugs.webkit.org/show_bug.cgi?id=60986

        * fast/dom/HTMLSelectElement/change-multiple-preserve-selection-expected.txt:
        * fast/dom/HTMLSelectElement/change-multiple-preserve-selection.html:
2011-05-19  Emil A Eklund  <eae@chromium.org>

        Reviewed by Alexey Proskuryakov.

        REGRESSION (r80808): Multiple <select> - Selection reset to first element from multiple selected ones
        https://bugs.webkit.org/show_bug.cgi?id=60986

        * html/HTMLSelectElement.cpp:
        (WebCore::HTMLSelectElement::setMultiple):
        Don't restore selection if the multiple attribute hasn't changed.

Canonical link: https://commits.webkit.org/76469@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86827 268f45cc-cd09-0410-ab3c-d52691b4dbfc